Finalized Gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<link href="style.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.css">
 </head>
 <body>
 
@@ -56,7 +57,7 @@
 
 	<div role="main">
 
-		<div class="jumbotron">
+		<div class="jumbotron j-gallery">
 			<div class="container">
 				<h1 class="display-3">Gallery</h1>
 				<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
@@ -64,81 +65,97 @@
 			</div>
 		</div>
 
-
 		<div class="container marketing">
 			<div class="row">
-				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				<div class="col-lg-3">
+					<a href="assets/gallery/001.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid " src="assets/gallery/thumbs/001.png">
+					</a>
 				</div>
-				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-				</div><!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				<div class="col-lg-3">
+					<a href="assets/gallery/002.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/002.png">
+					</a>
 				</div>
-			</div>
-
-			<!-- <hr class="featurette-divider">
-
-			<div class="row featurette">
-				<div class="col-md-7">
-					<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-					<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+				<div class="col-lg-3">
+					<a href="assets/gallery/003.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/003.png">
+					</a>
 				</div>
-				<div class="col-md-5">
-					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				<div class="col-lg-3">
+					<a href="assets/gallery/004.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/004.png">
+					</a>
 				</div>
-			</div>
-
-			<hr class="featurette-divider">
-
-			<div class="row featurette">
-				<div class="col-md-7 order-md-2">
-					<h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-					<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+				<div class="col-lg-3">
+					<a href="assets/gallery/005.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/005.png">
+					</a>
 				</div>
-				<div class="col-md-5 order-md-1">
-					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				<div class="col-lg-3">
+					<a href="assets/gallery/006.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/006.png">
+					</a>
 				</div>
-			</div> -->
-
-			<hr class="featurette-divider">
-
-			<div class="row featurette">
-				<div class="col-md-12">
-					<h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
-					<br>
-					<table class="table table-hover table-borderless">
-						<tbody>
-							<tr>
-								<td>Aditya</td>
-								<td><a href="tel:+919542196003">+91 95421 96003</a></td>
-							</tr>
-							<tr>
-								<td>Ajit</td>
-								<td><a href="tel:+918895567749">+91 88955 67749</a></td>
-							</tr>
-							<tr>
-								<td>Harshitha</td>
-								<td><a href="tel:+918186849922">+91 81868 49922</a></td>
-							</tr>
-							<tr>
-								<td>Laasya</td>
-								<td><a href="tel:+917285934496">+91 72859 34496</a></td>
-							</tr>
-						</tbody>
-					</table>
+				<div class="col-lg-3">
+					<a href="assets/gallery/007.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/007.png">
+					</a>
+				</div>
+				<div class="col-lg-3">
+					<a href="assets/gallery/008.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/008.png">
+					</a>
+				</div>
+				<div class="col-lg-3">
+					<a href="assets/gallery/009.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/009.png">
+					</a>
+				</div>
+				<div class="col-lg-3">
+					<a href="assets/gallery/010.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/010.png">
+					</a>
+				</div>
+				<div class="col-lg-3">
+					<a href="assets/gallery/011.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/011.png">
+					</a>
+				</div>
+				<div class="col-lg-3">
+					<a href="assets/gallery/012.png" data-toggle="lightbox" data-gallery="gallery">
+						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/012.png">
+					</a>
 				</div>
 			</div>
+		<hr class="featurette-divider">
+
+		<div class="row featurette">
+			<div class="col-md-12">
+				<h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
+				<br>
+				<table class="table table-hover table-borderless">
+				<tbody>
+				<tr>
+					<td>Aditya</td>
+						<td><a href="tel:+919542196003">+91 95421 96003</a></td>
+				</tr>
+				<tr>
+					<td>Ajit</td>
+					<td><a href="tel:+918895567749">+91 88955 67749</a></td>
+				</tr>
+				<tr>
+					<td>Harshitha</td>
+					<td><a href="tel:+918186849922">+91 81868 49922</a></td>
+				</tr>
+				<tr>
+					<td>Laasya</td>
+					<td><a href="tel:+917285934496">+91 72859 34496</a></td>
+				</tr>
+				</tbody>
+				</table>
+			</div>
+		</div>
 			<hr class="featurette-divider">
 		</div>
 
@@ -149,5 +166,12 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
+	<script type="text/javascript">
+		$(document).on("click", '[data-toggle="lightbox"]', function(event) {
+		  event.preventDefault();
+		  $(this).ekkoLightbox();
+		});
+	</script>
 </body>
 </html>
