Fixed Registration Link, Modified Contact Jumbotron

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 		<div class="jumbotron j-contact">
 			<div class="container">
 				<h1 class="display-3">Contact Us</h1>
-				<p>Do you have any interesting ideas you'd like to share? Any queries? Reach out to us!</p>
+				<p>Do you have any interesting ideas you'd like to share? Got a plan to execute a project or an event? Get it to CSI, we will make it happen.<br> Any queries? Reach out to us!</p>
 			</div>
 		</div>
 
@@ -69,10 +69,11 @@
 				<div class="col-lg-4">
 					<h2>For Registrations,</h2>
 					<p>Fill in the following form to sign up for CSI membership. (Applicable only for students of GITAM, Visakhapatnam.)</p>
-					<p><a class="btn btn-lg btn-primary" href="https://goo.gl/forms/TKuc48HXetFKtKKPl1" target="_blank" role="button">Register Now &raquo;</a></p>
+					<p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now &raquo;</a></p>
 				</div>
 				<div class="col-lg-4">
 					<h2>For enquries,</h2>
+					<p></p>
 					<p>Email us at <a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p>
 					<p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Contact us on Facebook &raquo;</a></p>
 				</div>
