--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="carousel-caption text-left">
 							<h1>Registrations are open!</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p><a class="btn btn-lg btn-primary" href="https://goo.gl/forms/TKuc48HXetFKtKKPl1" target="_blank" role="button">Register Now</a></p>
+							<p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now</a></p>
 						</div>
 					</div>
 				</div>
