Fixed Team Layout, Modified Jumbotron

--- a/team.html
+++ b/team.html
@@ -59,15 +59,14 @@
 		<div class="jumbotron j-team">
 			<div class="container">
 				<h2 class="display-3">Meet the Team</h2>
-				<p>We proudly take the opportunity to introduce the unbreakable backbone of the CSI that has led the events to a tremendous success. </p>
-				<!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+				<p>We proudly take the opportunity to introduce the backbone of CSI, GITAM Student Branch who have led every event on the road to success!</p>
 			</div>
 		</div>
 
 		<!-- Staff and President Section -->
 		<div class="container marketing">
-			<div class="row">
-				<div class="col-lg-4 offset-lg-2 col-sm-12 col-xs-12">
+			<div class="row justify-content-center">
+				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/K Thammi Reddy.jpg" alt="Generic placeholder image" width="140" height="140">
 					<h2>Prof. K. Thammi Reddy</h2>
 					<p>Head of Department, CSE</p>
@@ -80,6 +79,8 @@
 					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:sireesha.rodda@gitam.edu" role="button">E-Mail &raquo;</a></p>
 					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/sireesha-rodda-333a3915/" role="button">LinkedIn &raquo;</a></p>
 				</div>
+			</div>
+			<div class="row justify-content-center">
 				<div class="col-lg-4 offset-lg-2 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Neelima.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Smt.K. Neelima Santoshi</h2>
@@ -173,6 +174,7 @@
 					<img class="rounded-circle" src="assets/team/Dinesh Rajput.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Kintala Sai Dinesh</h2>
 					<p>Web Developer</p>
+					<p><a class="btn btn-info btn-lg" href="https://www.linkedin.com/in/kintali-sai-dinesh-b421aa145/" role="button">LinkedIn &raquo;</a></p>
 				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Bharwawaj.png" alt="Generic placeholder image" width="140" height="140">
