Modifed Gallery Jumbotron

--- a/gallery.html
+++ b/gallery.html
@@ -56,12 +56,10 @@
 	</header>
 
 	<div role="main">
-
 		<div class="jumbotron j-gallery">
 			<div class="container">
 				<h1 class="display-3">Gallery</h1>
-				<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-				<!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+				<p class="lead"><strong>As each year progresses, we take an initiative to make the students, staff and members ready to face the future with various technical, non-technical and course-related workshops, seminars &amp; events. <br><br> We take this opportunity to showcase some of the highlights of the events conducted by Team CSI!</strong></p>
 			</div>
 		</div>
 
@@ -135,27 +133,27 @@
 				<h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
 				<br>
 				<table class="table table-hover table-borderless">
-				<tbody>
-				<tr>
-					<td>Aditya</td>
-						<td><a href="tel:+919542196003">+91 95421 96003</a></td>
-				</tr>
-				<tr>
-					<td>Ajit</td>
-					<td><a href="tel:+918895567749">+91 88955 67749</a></td>
-				</tr>
-				<tr>
-					<td>Harshitha</td>
-					<td><a href="tel:+918186849922">+91 81868 49922</a></td>
-				</tr>
-				<tr>
-					<td>Laasya</td>
-					<td><a href="tel:+917285934496">+91 72859 34496</a></td>
-				</tr>
-				</tbody>
-				</table>
+					<tbody>
+					<tr>
+						<td>Aditya</td>
+							<td><a href="tel:+919542196003">+91 95421 96003</a></td>
+					</tr>
+					<tr>
+						<td>Ajit</td>
+						<td><a href="tel:+918895567749">+91 88955 67749</a></td>
+					</tr>
+					<tr>
+						<td>Harshitha</td>
+						<td><a href="tel:+918186849922">+91 81868 49922</a></td>
+					</tr>
+					<tr>
+						<td>Laasya</td>
+						<td><a href="tel:+917285934496">+91 72859 34496</a></td>
+					</tr>
+					</tbody>
+					</table>
+				</div>
 			</div>
-		</div>
 			<hr class="featurette-divider">
 		</div>
 
@@ -163,15 +161,11 @@
 			<p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
 		</footer>
 	</div>
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
-	<script type="text/javascript">
-		$(document).on("click", '[data-toggle="lightbox"]', function(event) {
-		  event.preventDefault();
-		  $(this).ekkoLightbox();
-		});
-	</script>
+	<script type="text/javascript"> $(document).on("click", '[data-toggle="lightbox"]', function(event) {event.preventDefault(); $(this).ekkoLightbox(); }); </script>
 </body>
 </html>
