Fixed email on Team page

--- a/team.html
+++ b/team.html
@@ -133,7 +133,7 @@
 					<h2>Sayana Dinesh Chandra</h2>
 					<p>Membership Chair</p>
 					<p><a class="btn btn-info btn-lg"" href="https://www.linkedin.com/in/dinesh-sayana-13997b11b/" role="button">LinkedIn &raquo;</a></p>
-				</div><!-- /.col-lg-4 col-sm-12 col-xs-12 -->
+				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Sowmya Ganne.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Ganne Sowmya</h2>
@@ -169,7 +169,7 @@
 					<img class="rounded-circle" src="assets/team/Kucharlapati Sai Avinash Varma.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>K. S. Avinash Varma</h2>
 					<p>Head of Community Service Operations</p>
-				</div><!-- /.col-lg-4 col-sm-12 col-xs-12 -->
+				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Dinesh Rajput.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Kintala Sai Dinesh</h2>
@@ -187,7 +187,7 @@
 					<img class="rounded-circle" src="assets/team/Kapuganti Lahari.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Kapuganti Lahari</h2>
 					<p>Technical Club Manager</p>
-				</div><!-- /.col-lg-4 col-sm-12 col-xs-12 -->
+				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Rayudu Nirmal Venkat Pavan Kumar.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>R. N. V. Pavan Kumar</h2>
@@ -206,7 +206,7 @@
 					<p>Hospitality Head</p>
 					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:iamthanuj@gmail.com" role="button">E-Mail &raquo;</a></p>
 					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/thanuj-reddy-197412b2" role="button">LinkedIn &raquo;</a></p>
-				</div><!-- /.col-lg-4 col-sm-12 col-xs-12 -->
+				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Pujith Vaddi.jpg" alt="Generic placeholder image" width="140" height="140">
 					<h2>Pujith Vaddi</h2>
@@ -227,7 +227,7 @@
 					<p>Event Manager</p>
 					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:gannamanenivagdevee@gmail.com" role="button">E-Mail &raquo;</a></p>
 					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/vagdevee-gannamaneni-6492aa155" role="button">LinkedIn &raquo;</a></p>
-				</div><!-- /.col-lg-4 col-sm-12 col-xs-12 -->
+				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Ashwarya Pullabhatla.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Aishwariya Pullabhatla</h2>
@@ -238,7 +238,7 @@
 					<img class="rounded-circle" src="assets/team/Likhitha Chandra Jami.png" alt="Generic placeholder image" width="140" height="140">
 					<h2>Likhitha Chandra Jami</h2>
 					<p>Technical Head</p>
-					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:sriaishpanky@gmail.com" role="button">E-Mail &raquo;</a></p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:likhithachandraj@gmail.com" role="button">E-Mail &raquo;</a></p>
 					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="http://www.linkedin.com/in/likhitha-chandra-jami-78333015a" role="button">LinkedIn &raquo;</a></p>
 				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
