--- a/gallery.html
+++ b/gallery.html
@@ -158,7 +158,7 @@
 		</div>
 
 		<footer class="container">
-			<p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+			<p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
 		</footer>
 	</div>
 
