--- a/credits.html
+++ b/credits.html
@@ -49,6 +49,12 @@
 					<li>
 						<a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
 					</li>
+					<li>
+						<a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
+					</li>
+					<li>
+						<a href="credits.html" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
+					</li>
 				</ul>
 			</div>
 		</nav>
