Fixed Team Name For K Sai Dinesh

--- a/team.html
+++ b/team.html
@@ -178,7 +178,7 @@
 				</div>
 				<div class="col-lg-4 col-sm-12 col-xs-12">
 					<img class="rounded-circle" src="assets/team/Dinesh Rajput.png" alt="Generic placeholder image" width="140" height="140">
-					<h3>Kintala Sai Dinesh</h3>
+					<h3>Kintali Sai Dinesh</h3>
 					<p>Web Developer</p>
 					<p><a class="btn btn-info btn-lg" href="https://www.linkedin.com/in/kintali-sai-dinesh-b421aa145/" role="button">LinkedIn &raquo;</a></p>
 				</div>
