Updated Contact List

--- a/team.html
+++ b/team.html
@@ -286,12 +286,16 @@
 								<td><a href="tel:+918895567749">+91 88955 67749</a></td>
 							</tr>
 							<tr>
-								<td>Harshitha</td>
-								<td><a href="tel:+918186849922">+91 81868 49922</a></td>
+								<td>Harsha</td>
+								<td><a href="tel:+919652988096">+91 96529 88096</a></td>
 							</tr>
 							<tr>
-								<td>Laasya</td>
-								<td><a href="tel:+917285934496">+91 72859 34496</a></td>
+								<td>Nikhil</td>
+								<td><a href="tel:+918978087191">+91 89780 87191</a></td>
+							</tr>
+							<tr>
+								<td>Subhash</td>
+								<td><a href="tel:+919100062658">+91 91000 62658</a></td>
 							</tr>
 						</tbody>
 					</table>
