--- a/credits.html
+++ b/credits.html
@@ -75,20 +75,20 @@
 				<div class="col-lg-4">
 					<h2>Naveen Malla</h2>
 					<p>Web Master</p>
-					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:naveenmalla046@gmail.com" target="_blank" role="button">E-Mail &raquo;</a></p>
-					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/naveen-malla/" target="_blank" role="button">LinkedIn &raquo;</a></p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline; margin-left: 25%" href="mailto:naveenmalla046@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
+					<p><a class="btn btn-info btn-lg" style="float: right; display: inline; margin-right: 25%" href="https://www.linkedin.com/in/naveen-malla/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
 				</div>
 				<div class="col-lg-4">
 					<h2>Aditya Chattopadhyay</h2>
 					<p>Web Developer, Graphic Designer</p>
-					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:adityasa99@gmail.com" target="_blank" role="button">E-Mail &raquo;</a></p>
-					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/AdityaSA99/" target="_blank" role="button">LinkedIn &raquo;</a></p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline; margin-left: 25%" href="mailto:adityasa99@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
+					<p><a class="btn btn-info btn-lg" style="float: right; display: inline; margin-right: 25%" href="https://www.linkedin.com/in/AdityaSA99/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
 				</div>
 				<div class="col-lg-4">
 					<h2>Ajit Panigrahi</h2>
 					<p>Web Developer, Content Writer</p>
-					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:ajitzero@gmail.com" target="_blank" role="button">E-Mail &raquo;</a></p>
-					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/AjitZero/" target="_blank" role="button">LinkedIn &raquo;</a></p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline; margin-left: 25%" href="mailto:ajitzero@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
+					<p><a class="btn btn-info btn-lg" style="float: right; display: inline; margin-right: 25%" href="https://www.linkedin.com/in/AjitZero/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
 				</div>
 			</div>
 
