--- a/events.html
+++ b/events.html
@@ -72,6 +72,58 @@
 
 		<div class="container marketing">
 			<div class="row">
+				<div class="col-lg-8 offset-lg-2">
+					<h2>Career Guidance and Future Studies</h2>
+					<p>On 21<sup>st</sup> March 2018, the CSI GITAM Student Branch in association with the department of Computer Science Engineering organized a seminar on "Career Guidance and Future Studies" and steered a career orientation session to success. The main speaker for the event was Ramaraju, Institute of Foreign Studies (IFS) Consultancy.</p>
+					<p><strong>Participation:</strong> 100+ students</p>
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>Cloud Computing and NLP</h2>
+					<p>The CSI GITAM Student Branch in association with the department of Computer Science Engineering organized a seminar on Cloud Computing and Natural Language Processing on 9<sup>th</sup> March 2018. The main speaker for the event was Vijay Ponduru, Lead Application Developer, Nuveen Technologies, San Francisco. He gave an insight on the working of the cloud computing systems and the basics of natural language processing while explaining its relevance in the industry and its scope in the future.</p>
+					<p><strong>Participation:</strong> 80+ students</p>
+					<!-- <p><a class="btn btn-success" href="assets/report/Virtual Reality and Augumented Reality.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2017-11-25 VR AR.png" class="img-fluid">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/2018-03-05 Ethereal 2k18.jpg" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>Ethereal 2K18, <span class="text-muted">CSI Annual Fest</span></h2>
+					<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering had organized the Annual fest named "Ethereal 2k18" on 5<sup>th</sup> and 6<sup>th</sup> March 2018. The fest was inaugurated by Professor Siba K Udgata. The two-day fest featured a vast variety of technical and non-technical events to promote the talent among students. A workshop on Smart Automation was also be conducted over the two days dealing with technologies based on Internet-of-Things (IoT) and Computational Intelligence.</p>
+					<p><strong>Participation:</strong> 400+ students</p>
+					<!-- <p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>Cloud Computing <span class="text-muted">by Alibaba Cloud</span></h2>
+					<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering hosted a workshop on "Cloud Computing" for Alibaba Cloud as a part of the CSI Annual Fest "Ethereal 2K18" on 3<sup>rd</sup> March 2018. The featured speakers for the event were - Shri. Sharat Chandra, MVP, Alibaba Cloud India Ltd and Shri. Goutham Upadhayay, Chief Technical Officer, Alibaba Cloud. They briefly explained the importance and the working of the cloud computing system with the live example of the WordPress website hosting on the Alibaba Cloud.</p>
+					<p><strong>Participation:</strong> 200+ students</p>
+					<!-- <p><a class="btn btn-success" href="assets/report/Cyber Security Workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2018-03-03 Alibaba Cloud Computing Workshop.jpg" class="img-fluid">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
 					<img src="assets/events/2017-18/2017-11-19 Distributed Computing.png" class="img-fluid">
 				</div>
@@ -87,7 +139,7 @@
 
 			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
-					<h2>VR &amp; AR</h2>
+					<h2>VR <span class="text-muted">&amp;</span> AR</h2>
 					<p>A workshop on IoT was held on November 25<sup>th</sup>, 2017 as a part of the CSI APSC 2017. The featured speaker for this event was Smt. Kavya, Director, iB Hubs, Bangalore. She helped everyone understand the intricacies of VR and AR in an interactive session where all the students were given a chance to experience Virtual Reality using a VR Box which they had brought along.</p>
 					<p><strong>Participation:</strong> 180+ students</p>
 					<p><a class="btn btn-success" href="assets/report/Virtual Reality and Augumented Reality.pdf" target="_blank" role="button">View details &raquo;</a></p>
@@ -104,7 +156,7 @@
 					<img src="assets/events/2017-18/2017-11-24 Internet of Things.png" class="img-fluid">
 				</div>
 				<div class="col-lg-5">
-					<h2>Internet of Things</h2>
+					<h2>Internet of Things <span class="text-muted">(IoT)</span></h2>
 					<p>An IOT Workshop was held on November 25<sup>th</sup>, 2017, as a part of the CSI APSC 2017. The featured speaker for the workshop was Shri Manikanta Gupta is Project Manager - IoT, iB Hubs. He introduced the emerging world of Internet of Things and the career options that arise with it. He explained the basics of IoT and had an interactive session showing the practicalities of IoT, encouraging everyone to be "makers".</p>
 					<p><strong>Participation:</strong> 180+ students</p>
 					<p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p>
@@ -132,7 +184,7 @@
 					<img src="assets/events/2017-18/2017-11-24 APSC.png" class="img-fluid">
 				</div>
 				<div class="col-lg-5">
-					<h2>CSI Andhra Pradesh Student Convention 2017-18</h2>
+					<h2>CSI Andhra Pradesh Student Convention <span class="text-muted">2017-18</span></h2>
 					<p><strong>Theme: </strong>"Rising India &mdash; A Step towards Digitalization"</p>
 					<p class="text-justify">The CSI APSC 2017-18 was hosted at GITAM, Visakhapatnam on 24<sup>th</sup> and 25<sup>th</sup> November, 2017. Over the two days a diverse variety of events took place for the convention such as Code Savvy, Quiztal Maze, Paper presentation, etc. and workshops on Cyber Security, IoT, VR & AR.</p>
 					<p><strong>Participation:</strong> 550+ students</p>
@@ -172,7 +224,7 @@
 
 			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
-					<h2>Android App Development using IoT and Integrated Embedded Systems</h2>
+					<h2>Android App Development using IoT <span class="text-muted">&amp;</span> Integrated Embedded Systems</h2>
 					<p>On 18<sup>th</sup> September, 2017, the workshop on "Android App Development using IoT and Integrated Embedded Systems" took place. Mr. Srikanth, Director &amp; national Head, Academy of Robotics, spoke about the world of startups and entrepreneurship and went on to delve into the idea of entrepreneurship with the help of programming, proper administration and software.</p>
 					<p><strong>Participation:</strong> 330+ students</p>
 					<p><a class="btn btn-success" href="assets/report/Workshop on Android development.pdf" target="_blank" role="button">View details &raquo;</a></p>
