--- a/team.html
+++ b/team.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-4 col-sm-12 col-xs-12">
                     <img class="rounded-circle" src="assets/team/Sireesha.png" alt="R. Sireesha" width="140" height="140">
                     <h3>Prof. R. Sireesha</h3>
-                    <p>CSI Facaulty Advisor</p>
+                    <p>CSI Faculty Advisor</p>
                     <p><a class="btn btn-danger btn-lg left-icon" href="mailto:sireesha.rodda@gitam.edu" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
                     <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/sireesha-rodda-333a3915/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
                 </div>
