C2A updated to Register Now

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                         <div class="carousel-caption text-left">
                             <h1>We are Team CSI</h1>
                             <p>The largest student organisation in GITAM, filled like an ocean with programmers, creators, innovators, designers and people who want to make a difference.</p>
-                            <p><a class="btn btn-lg btn-primary" href="team.html" role="button">Meet the Team</a></p>
+                            <p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now</a></p>
+                            <!--<p><a class="btn btn-lg btn-primary" href="team.html" role="button">Meet the Team</a></p>-->
                         </div>
                     </div>
                 </div>
