--- a/gallery.html
+++ b/gallery.html
@@ -21,9 +21,7 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-
     <title>CSI | Computer Society of India | GITAM Student Branch</title>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link href="style.css" rel="stylesheet">
@@ -34,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
             <a class="navbar-brand" href="index.html">
-				<img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
+                <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -87,63 +85,63 @@
             <div class="row">
                 <div class="col-lg-3">
                     <a href="assets/gallery/001.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid " src="assets/gallery/thumbs/001.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid " src="assets/gallery/thumbs/001.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/002.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/002.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/002.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/003.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/003.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/003.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/004.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/004.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/004.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/005.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/005.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/005.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/006.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/006.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/006.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/007.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/007.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/007.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/008.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/008.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/008.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/009.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/009.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/009.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/010.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/010.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/010.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/011.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/011.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/011.png">
+                    </a>
                 </div>
                 <div class="col-lg-3">
                     <a href="assets/gallery/012.png" data-toggle="lightbox" data-gallery="gallery">
-						<img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/012.png">
-					</a>
+                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/012.png">
+                    </a>
                 </div>
             </div>
             <hr class="featurette-divider">
@@ -187,7 +185,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
     <script type="text/javascript">
-	    $(document).on("click", '[data-toggle="lightbox"]', function(event) { event.preventDefault(); $(this).ekkoLightbox(); });
+    $(document).on("click", '[data-toggle="lightbox"]', function(event) { event.preventDefault();
+        $(this).ekkoLightbox(); });
     </script>
 </body>
 
