Removed .html from URL pattern

--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index">
                 <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,19 +38,19 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="events.html">Events</a>
+                        <a class="nav-link" href="events">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
+                        <a class="nav-link" href="gallery">Gallery</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="team.html">Team <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="team">Team <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact">Contact</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto social-icons">
@@ -67,7 +67,7 @@
                         <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
                     </li>
                     <li>
-                        <a href="credits.html" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
+                        <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
                     </li>
                 </ul>
             </div>
@@ -312,7 +312,7 @@
             <hr class="featurette-divider">
         </div>
         <footer class="container">
-            <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+            <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
