Added Related image for last event

--- a/events.html
+++ b/events.html
@@ -82,13 +82,12 @@
 		</div>
 		<div class="container marketing">
 			<div class="row">
-				<!-- <div class="col-lg-5">
-					<img src="assets/events/2017-18/2018-03-05 Ethereal 2k18.jpg" class="img-fluid">
-				</div> -->
-				<!-- <div class="col-lg-7"> -->
-				<div class="col-lg-8 offset-lg-2">
+				<div class="col-lg-5">
+					<img src="assets/events/2018-19/2018-07-17 Career Orientation George Prep.png" class="img-fluid">
+				</div>
+				<div class="col-lg-7">
 					<h2>Career Options <span class="text-muted">after Engineering Education</span></h2>
-					<p>On 17th July 2018, a seminar on "Career Options after Engineering Education" was organized by the CSI, GITAM Student Branch, in association with the Department of CSE. The guest speakers for the event were Mr Alosies George, Founder and Director, George Prep, and Shri Ram Mohan Adibhatla, Head - Verbal Ability, George Prep. The Principal, Head of Department, CSE, and the Training &amp; Placements Officer addressed the gathering and offered their exprience and advice regarding the ever-changing demands of placements. The guest speakers enlightened the students about the various career paths that they can choose by taking up competitive exams such as GRE and CAT. They suggested pursuing higher studies to build a network and foundation to gain a stable future with a high paying salary, and then introduced several fundamentals to serve as a guide for making definitive decisions towards their future.</p>
+					<p>On 17<sup>th</sup> July 2018, a seminar on "Career Options after Engineering Education" was organized by the CSI, GITAM Student Branch, in association with the Department of CSE. The guest speakers for the event were Mr Alosies George, Founder and Director, George Prep, and Shri Ram Mohan Adibhatla, Head - Verbal Ability, George Prep. The Principal, Head of Department, CSE, and the Training &amp; Placements Officer (TPO) addressed the gathering and offered their exprience and advice regarding the ever-changing demands of placements. The guest speakers enlightened the students about the various career paths that competitive exams such as GRE &amp; CAT offer and then recommended pursuing higher studies to build a network and foundation to gain a stable future. They then introduced several guidelines for making definitive decisions for their future.</p>
 					<p><strong>Participation:</strong> 500+ students</p>
 					<!-- <p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
 				</div>
