Modified Pics and Events

--- a/events.html
+++ b/events.html
@@ -81,6 +81,19 @@
 			</div>
 		</div>
 		<div class="container marketing">
+				<div class="row">
+						
+						<div class="col-lg-5">
+							<h2>Two-Day Workshop on Cyber Security</h2>
+							<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering had organized a two-day workshop on Cyber Security which was made to inculcate the students with a basic understanding of the world of ethical hacking and cyber security. The session was a mix of theory and hands-on where the participants tried hacking through a "Capture The Flag" challange.</p>
+							<p><strong>Participation:</strong> 70+ students</p>
+							<!-- <p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
+						</div>
+						<div class="col-lg-5 offset-lg-1">
+								<img src="assets/events/2018-19/2018-08-31 Cyber Security.png" class="img-fluid">
+						</div>
+					</div>
+					<hr class="featurette-divider">
 			<div class="row">
 				<div class="col-lg-5">
 					<img src="assets/events/2018-19/2018-07-17 Career Orientation George Prep.png" class="img-fluid">
@@ -111,7 +124,7 @@
 					<!-- <p><a class="btn btn-success" href="assets/report/Virtual Reality and Augumented Reality.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
 				</div>
 				<div class="col-lg-5">
-					<img src="assets/events/2017-18/2017-11-25 VR AR.png" class="img-fluid">
+					<img src="assets/events/2017-18/2018-03-09 NLP.jpg" class="img-fluid">
 				</div>
 			</div>
 			<hr class="featurette-divider">
