--- a/events.html
+++ b/events.html
@@ -77,19 +77,19 @@
 		<div class="jumbotron j-events">
 			<div class="container">
 				<h1 class="display-3">Events</h1>
-				<p>We've successfully organised and hosted 14+ seminars, workshops &amp; fests last year and we intend to go <em>beyond</em> this time around!</p>
+				<p>We've successfully organised and hosted 14+ seminars, workshops &amp; fests last year and this time around we intend to go <em>beyond!</em></p>
 			</div>
 		</div>
 		<div class="container marketing">
 				<div class="row">
 						
-						<div class="col-lg-5">
-							<h2>Two-Day Workshop on Cyber Security</h2>
-							<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering had organized a two-day workshop on Cyber Security which was made to inculcate the students with a basic understanding of the world of ethical hacking and cyber security. The session was a mix of theory and hands-on where the participants tried hacking through a "Capture The Flag" challange.</p>
+						<div class="col-lg-5 offset-lg-1">
+							<h2>Two-Day Workshop <br><span class="text-muted">on Cyber Security</span></h2>
+							<p>From 31<sup>st</sup> August to 1<sup>st</sup> September 2018, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, had organized a two-day workshop on Cyber Security which was made to inculcate the students with a basic understanding of the world of ethical hacking and cyber security. The speaker for the workshop was Mr. Vinod T. Senthil, Founder, Managing Director &amp; Chief Technical Officer, infySEC, Chennai. The session was a mix of theory and hands-on where the participants tried hacking their way through a "Capture The Flag" challenge hosted by infySEC.</p>
 							<p><strong>Participation:</strong> 70+ students</p>
 							<!-- <p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
 						</div>
-						<div class="col-lg-5 offset-lg-1">
+						<div class="col-lg-5">
 								<img src="assets/events/2018-19/2018-08-31 Cyber Security.png" class="img-fluid">
 						</div>
 					</div>
