--- a/events.html
+++ b/events.html
@@ -87,9 +87,9 @@
 					<img src="assets/events/2018-19/2018-11-20 Big Data Workshop.JPG" class="img-fluid">
 				</div>
 				<div class="col-lg-5">
-					<h2>Two-Day Workshop <br><span class="text-muted">on Cyber Security</span></h2>
-					<p>From 31<sup>st</sup> August to 1<sup>st</sup> September 2018, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, had organized a two-day workshop on Cyber Security which was made to inculcate the students with a basic understanding of the world of ethical hacking and cyber security. The speaker for the workshop was Mr. Vinod T. Senthil, Founder, Managing Director &amp; Chief Technical Officer, infySEC, Chennai. The session was a mix of theory and hands-on where the participants tried hacking their way through a "Capture The Flag" challenge hosted by infySEC.</p>
-					<p><strong>Participation:</strong> 70+ students</p>
+					<h2>Workshop <br><span class="text-muted">on Big Data Analytics</span></h2>
+					<p>On 20<sup>th</sup> November 2018, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, had organised a workshop on Big Data Analytics. The resource person and the Chief Guest for the event was Prof. Ravi Vatrapu, Centre of Business Data Analytics, Copenhagen Business School, Denmark. The workshop began as an interactive session with Prof. Ravi Vatrapu laying out the foundation of Social Set Analysis with examples of where an organisation can leverage its benefits. He introduced several fundamentals to serve as a base to the workshop and involved students with his questions.</p>
+					<p><strong>Participation:</strong> 150+ Students</p>
 				</div>
 			</div>
 			<hr class="featurette-divider">
